# jabot

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  databse.sqlite
migrations/: 20250916010101_initial_migration.sql
src/: main.rs  strings.rs
